--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Macchinette</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Terxt</h1>
+    <h1>Ciao</h1>
 </body>
 </html>
