update Index.html and data.txt

--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="ciao">
+    <link href="root.css" rel="stylesheet" type="text/css">
+    <link href="Home.css" rel="stylesheet" type="text/css"/>
+    <script src="Graphics.js"></script>
+    <link href="Events.js" type="text/javascript">
+    <title>Filippo Angaroni</title>
 </head>
-<body>
-    <h1>Ciao</h1>
+<body style="overflow-x: hidden; margin: 0px; overflow-y:scroll;">
+
+
+    <div id="menuHeader" class="menu-header">
+        <div id="menuHeaderBackground" class="menu-header-bg"></div>
+        <a class="menu-header-link" href="./Pages/Math/math.html">HOME</a>
+        <a class="menu-header-link" href="google.com">MATHS</a>
+        <a class="menu-header-link" href="google.com">CODING</a>
+        <a class="menu-header-link" href="google.com">GRAPHICS</a>
+    </div>
+
+
+
+    <div id="homePageHeader" class="home-page-header">
+        <div style="display: flex; flex-direction: column; width: 40vw; height: 100%; justify-content: center;  padding-left: 100px;">
+            <h1 class="title">Filippo</h1>
+            <h1 class="title">Angaroni</h1>
+        </div>
+        <!-- <button class="custom-button" style="height: 30px; margin: auto;">Ciao</button> -->
+    </div>
+
+    <div style="height: 1000px; background-color: var(--custom-white);"></div>
+
+    <script  src="Events.js">
+
+    </script>
 </body>
 </html>
