--- a/index.html
+++ b/index.html
@@ -11,35 +11,12 @@
     <link href="Events.js" type="text/javascript">
     <title>Filippo Angaroni</title>
 </head>
-<body class="main-body">
+<body class="main-body" style="overflow: hidden; background-color: var(--custom-black);">
 
 
-    <div id="menuHeader" class="menu-header">
-        <div id="menuHeaderBackground" class="menu-header-bg"></div>
-        <a class="menu-header-link" href="./Pages/Math/math.html">HOME</a>
-        <a class="menu-header-link" href="google.com">MATHS</a>
-        <a class="menu-header-link" href="google.com">CODING</a>
-        <a class="menu-header-link" href="google.com">GRAPHICS</a>
+    <div class="c-shape-1">
+
     </div>
-
-    <svg id="Livello_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
-        <defs>
-            <style>
-                .cls-1{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:1.1137px;}
-            </style>
-        </defs>
-        <path class="cls-1" d="M-56.3333,330.3333C12.0661,607.3401,236.0509,808.0717,491.667,830.3333c165.1505,14.3829,324.7824-51.502,448.5695-158.2156,70.9463-61.161,149.4301-141.526,162.9133-237.7133,16.081-114.7224-60.9018-271.426-196.3679-247.9162-132.2698,22.9551-169.3099,202.5629-125.7157,309.1986,59.1344,144.6478,227.9156,204.0083,371.4723,221.2993,204.1802,24.5929,414.5161,6.7034,609.9891-58.1811,93.4413-31.0165,183.7551-71.4511,269.1133-120.5163"/>
-    </svg>
-
-    <div id="homePageHeader" class="home-page-header">
-        <div id="homePageHeaderTitleDiv" class="home-page-header-title-div">
-            <h1 class="title">Filippo</h1>
-            <h1 class="title">Angaroni</h1>
-        </div>
-        <!-- <button class="custom-button" style="height: 30px; margin: auto;">Ciao</button> -->
-    </div>
-
-    <div style="height: 1000px; background-color: var(--custom-white);"></div>
 
     <script  src="Events.js">
 
